force-app/main/default/objects/Program_Change_Impact__c/Program_Change_Impact__c.object-meta.xml
<CustomObject>
    <label>Program Change Impact</label>
    <nameField>
        <displayFormat>PCIN-{0000000}</displayFormat>
        <label>Program Change Impact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Change Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>