force-app/main/default/objects/Program_Change_Impact__c/fields/Impacted_Departments_Programs__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Departments_Programs__c</fullName>
    <label>Impacted Departments &amp; Programs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>