force-app/main/default/objects/Program_Change_Impact__c/fields/Impacted_Process__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Process__c</fullName>
    <label>Impacted Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>